--- a/src/components/superorganisms/S_ResourcesSection/S_ResourcesSection.module.css
+++ b/src/components/superorganisms/S_ResourcesSection/S_ResourcesSection.module.css
@@ -13,3 +13,7 @@
 .cta {
   flex: 0 0 auto;
 }
+
+@media (max-width: 640px) {
+  .cta { display: none; }
+}
